Updating index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Solarize by TEMPLATED</title>
+		<title>Sanity</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -32,34 +32,22 @@
 					<div class="container">
 							
 						<!-- Logo -->
-							<h1><a href="#" id="logo">Solarize</a></h1>
+							<h1><a href="#" id="logo">Sanity</a></h1>
 						
 						<!-- Nav -->
 							<nav id="nav">
 								<ul>
-									<li class="active"><a href="index.html">Home</a></li>
+									<li class="active"><a href="index.html">Início</a></li>
 									<li>
-										<a href="">Dropdown</a>
+										<a href="">Documentação</a>
 										<ul>
-											<li><a href="#">Lorem ipsum dolor</a></li>
-											<li><a href="#">Magna phasellus</a></li>
-											<li><a href="#">Etiam dolore nisl</a></li>
-											<li>
-												<a href="">Phasellus consequat</a>
-												<ul>
-													<li><a href="#">Lorem ipsum dolor</a></li>
-													<li><a href="#">Phasellus consequat</a></li>
-													<li><a href="#">Magna phasellus</a></li>
-													<li><a href="#">Etiam dolore nisl</a></li>
-													<li><a href="#">Veroeros feugiat</a></li>
-												</ul>
-											</li>
-											<li><a href="#">Veroeros feugiat</a></li>
+											<li><a href="#">Manual / Wiki</a></li>
+											<li><a href="#">ChangeLog</a></li>
 										</ul>
 									</li>
-									<li><a href="left-sidebar.html">Left Sidebar</a></li>
-									<li><a href="right-sidebar.html">Right Sidebar</a></li>
-									<li><a href="no-sidebar.html">No Sidebar</a></li>
+									<li><a href="left-sidebar.html">Sobre Nós</a></li>
+									<li><a href="right-sidebar.html">Download</a></li>
+									<li><a href="http://github.com/igormoraisn/sanity">Github</a></li>
 								</ul>
 							</nav>
 	
@@ -69,9 +57,9 @@
 			<!-- Banner -->
 				<div id="banner">
 					<section class="container">
-						<h2>Solarize</h2>
-						<span>Design by Templated</span>
-						<p>Pellentesque pede. Donec pulvinar ullamcorper metus. In eu odio at lectus pulvinar mollis. Vestibulum sem magna.</p>
+						<h2>Sanity</h2>
+						<span>Versão atual(0.2)</span>
+						<p>De uma forma transparente e correta, lhe traremos uma bela experiência de uso. Conheça-nos!</p>
 					</section>
 				</div>
 
@@ -83,14 +71,14 @@
 					<div class="row double">
 						<div class="6u">
 							<header class="major">
-								<h2>Pellentesque viverra vulputate enim. Aliquam volutpat. Pellentesque tristique Risus</h2>
-								<span class="byline">In posuere eleifend odio. Quisque semper augue mattis wisi. Maecenas ligula. Pellentesque viverra vulputate enim. Donec pulvinar ullamcorper metus.</span>
+								<h2>Segurança e eficiência em um clique</h2>
+								<span class="byline">Com Sanity você tem sempre ao seu alcance um relatório completo com o real funcionamento dos seus softwares.</span>
 							</header>
 						</div>
 						<div class="6u">
-							<h3>Suspendisse dictum porta</h3>
-							<p>Donec leo. Vivamus fermentum nibh in augue. Praesent a lacus at urna congue rutrum. Nulla enim eros, porttitor eu, tempus id, varius non, nibh. Vestibulum imperdiet, magna nec eleifend semper augue mattis wisi maecenas ligula nunc lectus vestibulum euismod lacinia quam nisl.</p>
-							<a href="#" class="button">Nulla aluctus eleifend</a>
+							<h3>Nós temos muito pra te contar!</h3>
+							<p> Sinta-se convidado para entrar e conhecer nossas ideologias, objetivos e histórias.</p>
+							<a href="#" class="button">Leia!</a>
 						</div>
 					</div>
 				</section>
@@ -100,10 +88,10 @@
 			<div class="wrapper style3">
 				<section class="container">
 					<header class="major">
-						<h2>Cras vitae metus aliNuam</h2>
+						<h2>Junte-se a nós!</h2>
 					</header>
-					<p>Pellentesque pede. Donec pulvinar ullamcorper metus. In eu odio at lectus pulvinar mollis. Vestibulum sem magna, elementum vestibulum arcu.</p>
-					<a href="#" class="button alt">Nulla aluctus eleifend</a>
+					<p>Com a nossa ideologia de desenvolvimento de software Open Source, nós deixamos o código-fonte mais recente à disposição de testadores, desenvolvedores e usuários.</p>
+					<a href="https://github.com/igormoraisn/sanity" class="button alt">Acesse já!</a>
 				</section>
 			</div>
 
@@ -111,26 +99,25 @@
 			<div class="wrapper style4">
 				<section class="container">
 					<header class="major">
-						<h2>Cras vitae metus aliNuam</h2>
-						<span class="byline">pulvinar mollis. Vestibulum sem magna, elementum vestibulum arcu.</span>
+						<h2>+ Rápido, + Estável e + Preciso!</h2>
+						<span class="byline">Dia após dia, trabalhamos para deixar a sua experiência mais completa e interessante. O Sanity vem crescendo em funcionalidades para você!</span>
 					</header>
 					<div class="row flush">
 						<div class="4u">
 							<ul class="special-icons">
 								<li>
-									<span class="fa fa-cogs"></span>
-									<h3>Nulla luctus eleifend</h3>
-									<p>In posuere eleifend odio. Quisque semper augue mattis wisi. Maecenas ligula pellentesque.</p>
-								</li>
-								<li>
 									<span class="fa fa-wrench"></span>
-									<h3>Etiam posuere augue</h3>
-									<p>Maecenas ligula. Pellentesque viverra vulputate enim. Aliquam erat volutpat liguala.</p>
+									<h3>Simplicidade</h3>
+									<p>Utilizando ferramentas e recursos em conjunto para um diagnóstico rápido e preciso do seu sistema.</p>
 								</li>
+							</ul>
+						</div>
+						<div class="4u">
+							<ul class="special-icons">
 								<li>
 									<span class="fa fa-leaf"></span>
-									<h3>Fusce ultrices fringilla</h3>
-									<p>Maecenas pede nisl, elementum eu, ornare ac, malesuada at, erat. Proin gravida orci porttitor.</p>
+									<h3>Open-Source</h3>
+									<p>Um projeto de código-aberto e totalmente livre.</p>
 								</li>
 							</ul>
 						</div>
@@ -138,37 +125,8 @@
 							<ul class="special-icons">
 								<li>
 									<span class="fa fa-cogs"></span>
-									<h3>Nulla luctus eleifend</h3>
-									<p>In posuere eleifend odio. Quisque semper augue mattis wisi. Maecenas ligula pellentesque.</p>
-								</li>
-								<li>
-									<span class="fa fa-wrench"></span>
-									<h3>Etiam posuere augue</h3>
-									<p>Maecenas ligula. Pellentesque viverra vulputate enim. Aliquam erat volutpat liguala.</p>
-								</li>
-								<li>
-									<span class="fa fa-leaf"></span>
-									<h3>Fusce ultrices fringilla</h3>
-									<p>Maecenas pede nisl, elementum eu, ornare ac, malesuada at, erat. Proin gravida orci porttitor.</p>
-								</li>
-							</ul>
-						</div>
-						<div class="4u">
-							<ul class="special-icons">
-								<li>
-									<span class="fa fa-cogs"></span>
-									<h3>Nulla luctus eleifend</h3>
-									<p>In posuere eleifend odio. Quisque semper augue mattis wisi. Maecenas ligula pellentesque.</p>
-								</li>
-								<li>
-									<span class="fa fa-wrench"></span>
-									<h3>Etiam posuere augue</h3>
-									<p>Maecenas ligula. Pellentesque viverra vulputate enim. Aliquam erat volutpat liguala.</p>
-								</li>
-								<li>
-									<span class="fa fa-leaf"></span>
-									<h3>Fusce ultrices fringilla</h3>
-									<p>Maecenas pede nisl, elementum eu, ornare ac, malesuada at, erat. Proin gravida orci porttitor.</p>
+									<h3>Segurança</h3>
+									<p>Aumente confiabilidade nos programas que você possui.</p>
 								</li>
 							</ul>
 						</div>
@@ -180,29 +138,24 @@
 			<div class="wrapper style5">
 				<section id="team" class="container">
 					<header class="major">
-						<h2>Cras vitae metus aliNuam</h2>
-						<span class="byline">pulvinar mollis. Vestibulum sem magna, elementum vestibulum arcu</span>
+						<h2>Este é o nosso time!</h2>
+						<span class="byline">Contribua vocẽ também para este projeto</span>
 					</header>
 					<div class="row">
-						<div class="3u">
-							<a href="#" class="image"><img src="images/placeholder.png" alt=""></a>
-							<h3>Molly Millions</h3>
-							<p>In posuere eleifend odio quisque semper augue wisi ligula.</p>
+						<div class="4u">
+							<a href="https://github.com/igormoraisn" class="image"><img src="images/placeholder.png" alt=""></a>
+							<h3>Igor Nascimento</h3>
+							<p>igorn428@gmail.com</p>
 						</div>
-						<div class="3u">
+						<div class="4u">
 							<a href="#" class="image"><img src="images/placeholder.png" alt=""></a>
-							<h3>Henry Dorsett Case</h3>
-							<p>In posuere eleifend odio quisque semper augue wisi ligula.</p>
+							<h3>Artur Santos</h3>
+							<p>eartursempre@hotmail.com</p>
 						</div>
-						<div class="3u">
+						<div class="4u">
 							<a href="#" class="image"><img src="images/placeholder.png" alt=""></a>
-							<h3>Willis Corto</h3>
-							<p>In posuere eleifend odio quisque semper augue wisi ligula.</p>
-						</div>
-						<div class="3u">
-							<a href="#" class="image"><img src="images/placeholder.png" alt=""></a>
-							<h3>Linda Lee</h3>
-							<p>In posuere eleifend odio quisque semper augue wisi ligula.</p>
+							<h3>Thales Francisco</h3>
+							<p>thales@alvesnet.net</p>
 						</div>
 					</div>
 				</section>
@@ -212,8 +165,8 @@
 		<div id="footer">
 			<section class="container">
 				<header class="major">
-					<h2>Connect with us</h2>
-					<span class="byline">Integer sit amet pede vel arcu aliquet pretium</span>
+					<h2>Conecte-se conosco</h2>
+					<span class="byline">Essas são as redes sociais oficiais do Sanity</span>
 				</header>
 				<ul class="icons">
 					<li class="active"><a href="#" class="fa fa-facebook"><span>Facebook</span></a></li>
