Updating index.html

--- a/index.html
+++ b/index.html
@@ -148,12 +148,12 @@
 							<p>igorn428@gmail.com</p>
 						</div>
 						<div class="4u">
-							<a href="#" class="image"><img src="images/placeholder.png" alt=""></a>
+							<a href="https://github.com/arturxz" class="image"><img src="images/placeholder.png" alt=""></a>
 							<h3>Artur Santos</h3>
 							<p>eartursempre@hotmail.com</p>
 						</div>
 						<div class="4u">
-							<a href="#" class="image"><img src="images/placeholder.png" alt=""></a>
+							<a href="https://github.com/arquimago" class="image"><img src="images/placeholder.png" alt=""></a>
 							<h3>Thales Francisco</h3>
 							<p>thales@alvesnet.net</p>
 						</div>
