Updating index.html

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
 											<li><a href="#">ChangeLog</a></li>
 										</ul>
 									</li>
-									<li><a href="">Sobre Nós</a></li>
-									<li><a href="">Download</a></li>
+									<li><a href="#">Sobre Nós</a></li>
+									<li><a href="#">Download</a></li>
 									<li><a href="http://github.com/igormoraisn/sanity">Github</a></li>
 								</ul>
 							</nav>
